93. Multi-class classification part 4: Improving performance with normalisation

--- a/02_neural_network_classification_with_tensorflow.ipynb
+++ b/02_neural_network_classification_with_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02_neural_network_classification_with_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyOCCaqVKn7oQE2d74kdIQRt",
+      "authorship_tag": "ABX9TyOtakaRPs7qUKQaA2dMAeoy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4777,11 +4777,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EwXPQorffDCi",
-        "outputId": "67b98f7b-113c-4a69-ec74-0a6a47c547bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EwXPQorffDCi",
+        "outputId": "67b98f7b-113c-4a69-ec74-0a6a47c547bc"
       },
       "source": [
         "# our data needs to be flattened from (28 * 28 to None, 784)\n",
@@ -4807,11 +4807,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7YxThozffQJN",
-        "outputId": "96e1ee9e-1219-447c-e072-bfb71dd29145",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7YxThozffQJN",
+        "outputId": "96e1ee9e-1219-447c-e072-bfb71dd29145"
       },
       "source": [
         "28 * 28"
@@ -4835,11 +4835,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9MMV345Jf24B",
-        "outputId": "586c04d6-7e24-4891-c354-af5dbabd7862",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9MMV345Jf24B",
+        "outputId": "586c04d6-7e24-4891-c354-af5dbabd7862"
       },
       "source": [
         "train_labels[:10]"
@@ -4863,11 +4863,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "73wKfyPQgU77",
-        "outputId": "d1793bc0-8dc2-4186-9740-a974d97cf7a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "73wKfyPQgU77",
+        "outputId": "d1793bc0-8dc2-4186-9740-a974d97cf7a6"
       },
       "source": [
         "tf.one_hot(train_labels[:10] , depth=10)"
@@ -4959,6 +4959,197 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8F9AlotbHnCf"
+      },
+      "source": [
+        " Val_loss and val_accuracy are validation loss and accuracy on the test data above"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QEK5sFn2ICGr",
+        "outputId": "72d4696b-f698-4c36-80ff-25f91462a13a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the model summary\n",
+        "model_11.summary()"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_12\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "flatten_1 (Flatten)          (None, 784)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_26 (Dense)             (None, 4)                 3140      \n",
+            "_________________________________________________________________\n",
+            "dense_27 (Dense)             (None, 4)                 20        \n",
+            "_________________________________________________________________\n",
+            "dense_28 (Dense)             (None, 10)                50        \n",
+            "=================================================================\n",
+            "Total params: 3,210\n",
+            "Trainable params: 3,210\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NUD1xqucILX1",
+        "outputId": "50ecac65-08f6-42b8-eb47-b3f5bcec70a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the min max values of the training data\n",
+        "train_data.min(), train_data.max()"
+      ],
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 255)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3JIkQEhrIoMD"
+      },
+      "source": [
+        "Neural networks prefer data to be scaled(or normalize), this means they like to have the numbers in the tensory they try to find patterns between 0 and 1."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DkgvZ_k6I32u",
+        "outputId": "36b50e1a-347f-4c47-f93e-e77f7a45e4d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# We can get our training and testing data between 0 and 1 by dividing by the maximum\n",
+        "train_data_norm = train_data / 255.0\n",
+        "test_data_norm = test_data / 255.0\n",
+        "\n",
+        "#Check min /max values of the scaled training data\n",
+        "train_data_norm.min(), train_data_norm.max()"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.0, 1.0)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xC-ZPw68MQZz",
+        "outputId": "0cc4f883-736f-4b7e-a736-ca6e08eb9419",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Now our data is normalized, let's build a model to find patterns\n",
+        "# set the random seed\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "# 1. Create the model (same as model_11)\n",
+        "model_12 = tf.keras.Sequential([\n",
+        "      tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+        "      tf.keras.layers.Dense(4, activation=\"relu\") ,\n",
+        "      tf.keras.layers.Dense(4, activation=\"relu\"),\n",
+        "      tf.keras.layers.Dense(10, activation=\"softmax\")                         \n",
+        "])\n",
+        "\n",
+        "# 2. Compile the model\n",
+        "model_12.compile(loss = tf.keras.losses.SparseCategoricalCrossentropy(), \n",
+        "                 optimizer = tf.keras.optimizers.Adam(),\n",
+        "                 metrics=[\"accuracy\"])\n",
+        "\n",
+        "# 3. Fit the model\n",
+        "norm_history = model_12.fit(train_data_norm, \n",
+        "                            train_labels, \n",
+        "                            epochs=10, \n",
+        "                            validation_data =(test_data_norm, test_labels))"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 1.0348 - accuracy: 0.6474 - val_loss: 0.6937 - val_accuracy: 0.7617\n",
+            "Epoch 2/10\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.6376 - accuracy: 0.7757 - val_loss: 0.6400 - val_accuracy: 0.7820\n",
+            "Epoch 3/10\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5942 - accuracy: 0.7914 - val_loss: 0.6247 - val_accuracy: 0.7783\n",
+            "Epoch 4/10\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5750 - accuracy: 0.7979 - val_loss: 0.6078 - val_accuracy: 0.7881\n",
+            "Epoch 5/10\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5641 - accuracy: 0.8006 - val_loss: 0.6169 - val_accuracy: 0.7881\n",
+            "Epoch 6/10\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5544 - accuracy: 0.8043 - val_loss: 0.5855 - val_accuracy: 0.7951\n",
+            "Epoch 7/10\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5488 - accuracy: 0.8063 - val_loss: 0.6097 - val_accuracy: 0.7836\n",
+            "Epoch 8/10\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5428 - accuracy: 0.8077 - val_loss: 0.5787 - val_accuracy: 0.7971\n",
+            "Epoch 9/10\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5373 - accuracy: 0.8097 - val_loss: 0.5698 - val_accuracy: 0.7977\n",
+            "Epoch 10/10\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5360 - accuracy: 0.8124 - val_loss: 0.5658 - val_accuracy: 0.8014\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q7Mep8eDTkCx"
+      },
+      "source": [
+        "> **Note** : Neural networks tend to prefer data in numerical form as well as scaled/normalized(numbers between 0 and 1)"
       ]
     }
   ]
