96. Multi-class classification part 7: Evaluating our model

--- a/02_neural_network_classification_with_tensorflow.ipynb
+++ b/02_neural_network_classification_with_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02_neural_network_classification_with_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzZiY/Zy/kHdZ+cmTbv7Wh",
+      "authorship_tag": "ABX9TyPo1SHPMxjB5OYL1oLDEFUv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2862,7 +2862,7 @@
         "id": "_R4_wQ1nhUHJ"
       },
       "source": [
-        "## Evaluating and improving our classification\n",
+        "## Evaluating and improving our classification model\n",
         "\n",
         "So far we've been training and testing on the same dataset ...\n",
         "However, in machine learning, this is basically a sin.\n",
@@ -3062,7 +3062,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 379
         },
         "id": "3JjNyTCtl5ys",
         "outputId": "e0394fa9-52d4-4399-e9d9-dc3d25b803d6"
@@ -4229,7 +4229,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 580
         },
         "id": "SFQL3d9KeTwG",
         "outputId": "df0c60af-2077-4ab3-a73f-243c214a0b68"
@@ -4370,7 +4370,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 580
         },
         "id": "RY38zpLVjTfV",
         "outputId": "fa0661d4-7d58-478a-87d8-3302b7cc8587"
@@ -5233,11 +5233,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Nmg-f1CZ4zbF",
-        "outputId": "e6ef1e7a-e4f9-4ce9-b484-32a78572f9ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Nmg-f1CZ4zbF",
+        "outputId": "e6ef1e7a-e4f9-4ce9-b484-32a78572f9ef"
       },
       "source": [
         "# Set the random_seed\n",
@@ -5360,12 +5360,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_qqlpGk76NVK",
-        "outputId": "22c58b6c-062a-4ca1-945f-b108bc02b698",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
-        }
+        },
+        "id": "_qqlpGk76NVK",
+        "outputId": "22c58b6c-062a-4ca1-945f-b108bc02b698"
       },
       "source": [
         "# Plot the learning rate decay curve\n",
@@ -5410,11 +5410,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pZSmlZ578GHJ",
-        "outputId": "a06e9424-12e2-4cbc-ec65-bf2ae378a19a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pZSmlZ578GHJ",
+        "outputId": "a06e9424-12e2-4cbc-ec65-bf2ae378a19a"
       },
       "source": [
         "10**-3\n"
@@ -5438,11 +5438,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iHvrNRNn8QqR",
-        "outputId": "b1f60931-5093-4842-d356-b62f2772512f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iHvrNRNn8QqR",
+        "outputId": "b1f60931-5093-4842-d356-b62f2772512f"
       },
       "source": [
         "# Let's refit a model with ideal learning rate\n",
@@ -5469,7 +5469,7 @@
         "                          epochs=20,\n",
         "                          validation_data=(test_data_norm, test_labels))"
       ],
-      "execution_count": null,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -5493,11 +5493,300 @@
             "Epoch 9/20\n",
             "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5373 - accuracy: 0.8097 - val_loss: 0.5698 - val_accuracy: 0.7977\n",
             "Epoch 10/20\n",
-            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5360 - accuracy: 0.8124 - val_loss: 0.5658 - val_accuracy: 0.8014\n"
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5360 - accuracy: 0.8124 - val_loss: 0.5658 - val_accuracy: 0.8014\n",
+            "Epoch 11/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5311 - accuracy: 0.8130 - val_loss: 0.5714 - val_accuracy: 0.8002\n",
+            "Epoch 12/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5284 - accuracy: 0.8132 - val_loss: 0.5626 - val_accuracy: 0.8027\n",
+            "Epoch 13/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5271 - accuracy: 0.8138 - val_loss: 0.5619 - val_accuracy: 0.8041\n",
+            "Epoch 14/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5249 - accuracy: 0.8143 - val_loss: 0.5718 - val_accuracy: 0.7991\n",
+            "Epoch 15/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5231 - accuracy: 0.8148 - val_loss: 0.5706 - val_accuracy: 0.8024\n",
+            "Epoch 16/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5203 - accuracy: 0.8162 - val_loss: 0.5731 - val_accuracy: 0.8023\n",
+            "Epoch 17/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5191 - accuracy: 0.8176 - val_loss: 0.5594 - val_accuracy: 0.8030\n",
+            "Epoch 18/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5176 - accuracy: 0.8157 - val_loss: 0.5582 - val_accuracy: 0.8053\n",
+            "Epoch 19/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5156 - accuracy: 0.8169 - val_loss: 0.5644 - val_accuracy: 0.8007\n",
+            "Epoch 20/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5146 - accuracy: 0.8177 - val_loss: 0.5660 - val_accuracy: 0.8075\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "okIS1KlH9Rkt"
+      },
+      "source": [
+        "## Evaluating our multi-class classification model\n",
+        "\n",
+        "To evaluate our multi-class classification model, we could :\n",
+        "* Evaluate its performance using other classificaiton metrics (such as confusion matrix)\n",
+        "* Assess some of its predictions(through visualizations)\n",
+        "* Improve its results (by training it for longer or changing the architecture)\n",
+        "* Save and export it for use in an application.\n",
+        "\n",
+        "Let's go through the top 2..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P6K3LwiI-DuZ"
+      },
+      "source": [
+        "# Create a confusion matrix\n",
+        "import itertools \n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "def make_confusion_matrix(y_true, y_pred, classes=None, figsize=(10, 10), text_size=15) :\n",
+        "\n",
+        "  # Create the confusion matrix\n",
+        "  cm = confusion_matrix(y_test, tf.round(y_pred))\n",
+        "  cm_norm = cm.astype(\"float\") / cm.sum(axis=1)[:, np.newaxis] # normalize our confusion matrix\n",
+        "  n_classes = cm.shape[0]\n",
+        "\n",
+        "  #Let's prettify it\n",
+        "  fig, ax = plt.subplots(figsize=figsize)\n",
+        "  #Create a matrix plot\n",
+        "  cax = ax.matshow(cm, cmap=plt.cm.Blues)\n",
+        "  fig.colorbar(cax)\n",
+        "\n",
+        "  # Set labels to be classes\n",
+        "  if classes :\n",
+        "    labels = classes\n",
+        "  else :\n",
+        "    labels = np.arange(cm.shape[0])\n",
+        "\n",
+        "  #Label the axes\n",
+        "  ax.set(title=\"Confusion Matrix\",\n",
+        "        xlabel = \"Predicted Label\",\n",
+        "        ylabel=\"True Label\", \n",
+        "        xticks=np.arange(n_classes),\n",
+        "        yticks=np.arange(n_classes),\n",
+        "        yticklabels=labels)\n",
+        "\n",
+        "  # Set x-axis labels to the bottom\n",
+        "  ax.xaxis.set_label_position(\"bottom\")\n",
+        "  ax.xaxis.tick_bottom()\n",
+        "\n",
+        "  #Adjust label size\n",
+        "  ax.yaxis.label.set_size(text_size)\n",
+        "  ax.xaxis.label.set_size(text_size)\n",
+        "  ax.title.set_size(text_size)\n",
+        "\n",
+        "  #Set threshold for differnt colors\n",
+        "  threshold = (cm.max() + cm.min()) / 2.\n",
+        "\n",
+        "  #Plot the text on each cell\n",
+        "  for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])) :\n",
+        "    plt.text(j, i, f\"{cm[i, j]} ({cm_norm[i, j] * 100 : .1f} %)\",\n",
+        "            horizontalalignment=\"center\",\n",
+        "            color=\"white\" if cm[i, j] > threshold else \"black\",\n",
+        "            size=text_size)\n"
+      ],
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RB0JV6hM_Jn5",
+        "outputId": "99555776-9bc0-4c18-fae5-bf1f40615ac1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "class_names"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['T-shirt/top ',\n",
+              " 'Trouser',\n",
+              " 'Pullover',\n",
+              " 'Dress',\n",
+              " 'Coat',\n",
+              " 'Sandal',\n",
+              " 'Shirt',\n",
+              " 'Sneaker',\n",
+              " 'Bag',\n",
+              " 'Ankle boot']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f3L5gZsy_LW7",
+        "outputId": "c9738010-51c1-448f-ff7d-635f5b82d98d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make some predictions with our model\n",
+        "y_probs = model_14.predict(test_data_norm) # probs is short for \"prediction probabilities\"\n",
+        "\n",
+        "#View the first 5 predictions\n",
+        "y_probs[:5]"
+      ],
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[8.56299753e-11, 3.53615629e-13, 2.66337556e-05, 4.63562024e-08,\n",
+              "        5.09498605e-05, 9.61192474e-02, 8.17780403e-08, 9.18688551e-02,\n",
+              "        4.06052778e-03, 8.07873666e-01],\n",
+              "       [3.42785552e-06, 1.28992649e-16, 9.59891498e-01, 2.05162564e-07,\n",
+              "        1.53292371e-02, 2.45320095e-13, 2.41428725e-02, 1.13834485e-28,\n",
+              "        6.32718089e-04, 4.47896404e-08],\n",
+              "       [6.10630595e-05, 9.96576726e-01, 4.38669758e-08, 3.34058981e-03,\n",
+              "        1.32494861e-05, 1.43831603e-21, 8.27906115e-06, 7.32374630e-18,\n",
+              "        5.48116041e-08, 4.92251402e-14],\n",
+              "       [7.50314357e-05, 9.90536869e-01, 4.25285322e-07, 9.22318175e-03,\n",
+              "        1.36231421e-04, 1.82760903e-18, 2.68082422e-05, 4.81248308e-14,\n",
+              "        1.45215904e-06, 2.22114601e-11],\n",
+              "       [7.21899569e-02, 1.54957536e-06, 2.55668938e-01, 1.03631355e-02,\n",
+              "        4.35413495e-02, 1.10693023e-13, 6.16930187e-01, 6.75438989e-23,\n",
+              "        1.30491622e-03, 1.21404065e-09]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 105
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2sZ6WbafAISm"
+      },
+      "source": [
+        "> **Note** : Remember to make predictions on the same kind of data your model was trained on (e.g.) if your model was trained on normalized data, you'll want to make predictions on normalized data)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wgBQnapdAbQy",
+        "outputId": "4c555992-a352-4cfb-abc4-318f5b9f8c8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y_probs[0], tf.argmax(y_probs[0]), class_names[tf.argmax(y_probs[0])]"
+      ],
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([8.5629975e-11, 3.5361563e-13, 2.6633756e-05, 4.6356202e-08,\n",
+              "        5.0949860e-05, 9.6119247e-02, 8.1778040e-08, 9.1868855e-02,\n",
+              "        4.0605278e-03, 8.0787367e-01], dtype=float32),\n",
+              " <tf.Tensor: shape=(), dtype=int64, numpy=9>,\n",
+              " 'Ankle boot')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cXw6c_x8AjIq",
+        "outputId": "307b93ee-82c1-40a1-a996-4f2f77425e33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Convert all of the prediction probabilites into integers\n",
+        "y_preds = y_probs.argmax(axis=1)\n",
+        "y_preds[:10]"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([9, 2, 1, 1, 6, 1, 4, 6, 5, 7])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8eokfu4sBH60",
+        "outputId": "283089a1-6982-467f-9d24-58a633e2687f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "test_labels"
+      ],
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([9, 2, 1, ..., 8, 1, 5], dtype=uint8)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 112
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yn7lsfweBJ2a"
+      },
+      "source": [
+        "model_14."
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
