#103. getting the data

--- a/03_convolutional_neural_network_in_tensorflow.ipynb
+++ b/03_convolutional_neural_network_in_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03_convolutional_neural_network_in_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAHVc8u5xREi1fRHmpjYs1",
+      "authorship_tag": "ABX9TyOkYvQPJa574/I/Kdsy4Zj2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,33 @@
         "id": "-8fbclEDHYdu"
       },
       "source": [
-        "001"
+        "# Introduction to Convolutional Neural Networks and Computer Vision with TensorFlow\n",
+        "\n",
+        "\n",
+        "Computer vision is the practice of writing algorithms which can discover patterns in visual data. Such as the camera of a self-driving car recognizing the car in front.\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UKVmDo7gUnMh"
+      },
+      "source": [
+        "##  Get the data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NItWe34nUr7y"
+      },
+      "source": [
+        "import zipfile\n",
+        "\n",
+        "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/pizza_steak.zip"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
