103. Get the image data for our CNN

--- a/03_convolutional_neural_network_in_tensorflow.ipynb
+++ b/03_convolutional_neural_network_in_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03_convolutional_neural_network_in_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyOkYvQPJa574/I/Kdsy4Zj2",
+      "authorship_tag": "ABX9TyM+UD7n1K+h3xRgwcBmq4nR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,18 +46,62 @@
         "id": "UKVmDo7gUnMh"
       },
       "source": [
-        "##  Get the data"
+        "##  Get the data\n",
+        "\n",
+        "The images we're working with are the from the Food101 dataset (101 different classes of food) :[https://www.kaggle.com/kmader/food41](https://www.kaggle.com/kmader/food41)\n",
+        "\n",
+        "However we've modified it to only use 2 classes (pizza & steak) using the image data modification notebook : [https://github.com/mrdbourke/tensorflow-deep-learning/blob/main/extras/image_data_modification.ipynb](https://github.com/mrdbourke/tensorflow-deep-learning/blob/main/extras/image_data_modification.ipynb)\n",
+        "\n",
+        "Note : We start with a smaller dataset so we can experiment quickly and figure what works (or better yet what doesnt work)\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NItWe34nUr7y"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NItWe34nUr7y",
+        "outputId": "bf8d8a8a-6197-4678-8c7c-3e3fea7c2988"
       },
       "source": [
         "import zipfile\n",
         "\n",
-        "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/pizza_steak.zip"
+        "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/pizza_steak.zip\n",
+        "\n",
+        "# Unzip the download file\n",
+        "zip_ref = zipfile.ZipFile(\"pizza_steak.zip\")\n",
+        "zip_ref.extractall()\n",
+        "zip_ref.close()\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-06-26 22:02:58--  https://storage.googleapis.com/ztm_tf_course/food_vision/pizza_steak.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.250.101.128, 142.251.2.128, 142.250.141.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.250.101.128|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 109579078 (105M) [application/zip]\n",
+            "Saving to: ‘pizza_steak.zip’\n",
+            "\n",
+            "pizza_steak.zip     100%[===================>] 104.50M   101MB/s    in 1.0s    \n",
+            "\n",
+            "2021-06-26 22:03:00 (101 MB/s) - ‘pizza_steak.zip’ saved [109579078/109579078]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kV8olxuAWQsg"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
