--- a/03_convolutional_neural_network_in_tensorflow.ipynb
+++ b/03_convolutional_neural_network_in_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03_convolutional_neural_network_in_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBFseyHBI93UEjZjBIEzIR",
+      "authorship_tag": "ABX9TyPDNxIGWx0JK43/etgcoPj7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -749,7 +749,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ATjmeUoRkSwy",
-        "outputId": "e73e0552-ef4e-4c81-c069-66958ff1a2de"
+        "outputId": "fcd5e42a-7564-4890-87d1-1ece7b1a2d68"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -809,7 +809,7 @@
         "\n",
         "                                            "
       ],
-      "execution_count": 15,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,15 +817,15 @@
             "Found 1500 images belonging to 2 classes.\n",
             "Found 500 images belonging to 2 classes.\n",
             "Epoch 1/5\n",
-            "47/47 [==============================] - 13s 203ms/step - loss: 0.5454 - accuracy: 0.7167 - val_loss: 0.4035 - val_accuracy: 0.8360\n",
+            "47/47 [==============================] - 10s 195ms/step - loss: 0.5654 - accuracy: 0.7193 - val_loss: 0.4282 - val_accuracy: 0.8040\n",
             "Epoch 2/5\n",
-            "47/47 [==============================] - 9s 186ms/step - loss: 0.4212 - accuracy: 0.8113 - val_loss: 0.3391 - val_accuracy: 0.8620\n",
+            "47/47 [==============================] - 9s 190ms/step - loss: 0.4418 - accuracy: 0.8033 - val_loss: 0.3486 - val_accuracy: 0.8560\n",
             "Epoch 3/5\n",
-            "47/47 [==============================] - 9s 189ms/step - loss: 0.4072 - accuracy: 0.8220 - val_loss: 0.3362 - val_accuracy: 0.8740\n",
+            "47/47 [==============================] - 9s 190ms/step - loss: 0.3891 - accuracy: 0.8287 - val_loss: 0.3353 - val_accuracy: 0.8660\n",
             "Epoch 4/5\n",
-            "47/47 [==============================] - 9s 187ms/step - loss: 0.3737 - accuracy: 0.8433 - val_loss: 0.3123 - val_accuracy: 0.8660\n",
+            "47/47 [==============================] - 9s 187ms/step - loss: 0.4164 - accuracy: 0.8140 - val_loss: 0.3167 - val_accuracy: 0.8760\n",
             "Epoch 5/5\n",
-            "47/47 [==============================] - 9s 186ms/step - loss: 0.3358 - accuracy: 0.8540 - val_loss: 0.3099 - val_accuracy: 0.8800\n"
+            "47/47 [==============================] - 9s 186ms/step - loss: 0.3471 - accuracy: 0.8540 - val_loss: 0.3998 - val_accuracy: 0.8120\n"
           ],
           "name": "stdout"
         }
@@ -915,11 +915,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xoNnu6l5xklr",
-        "outputId": "ea66ceba-4b09-4042-ca44-5cc5c75d7bc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xoNnu6l5xklr",
+        "outputId": "ea66ceba-4b09-4042-ca44-5cc5c75d7bc0"
       },
       "source": [
         "# Get a model summary\n",
@@ -955,6 +955,80 @@
             "Trainable params: 31,101\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DgpqBE7E2bcD"
+      },
+      "source": [
+        "**Pratice/Exercise** : Goto the CNN explainer here [https://poloclub.github.io/cnn-explainer/](https://poloclub.github.io/cnn-explainer/)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mK5lTNW48at8"
+      },
+      "source": [
+        "## Using the same model as before\n",
+        "\n",
+        "Let's replicate the model we've built in a previous section to see if works with our image data.\n",
+        "The model we're building is from the [TensorFlow playground.](https://playground.tensorflow.org/#activation=tanh&batchSize=10&dataset=circle&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=0&networkShape=4,2,2&seed=0.37865&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=false&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bsu2V58T82_9",
+        "outputId": "f1820a98-06cf-4ab9-ff97-dcd1e9cf3f9a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Set the random seed\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "# Create a model\n",
+        "model_2 = tf.keras.Sequential([\n",
+        "  tf.keras.layers.Flatten(input_shape=(224, 224, 3)),\n",
+        "  tf.keras.layers.Dense(4, activation=\"relu\"),\n",
+        "  tf.keras.layers.Dense(4, activation=\"relu\"),\n",
+        "  tf.keras.layers.Dense(1, activation=\"sigmoid\")\n",
+        "])\n",
+        "\n",
+        "# Compile the model\n",
+        "model_2.compile(loss=\"binary_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n",
+        "# Fit the model\n",
+        "history_2 = model_2.fit(train_data, \n",
+        "                        epochs=5, \n",
+        "                        steps_per_epoch=len(train_data),\n",
+        "                        validation_data=valid_data,\n",
+        "                        validation_steps= len(valid_data))"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            "47/47 [==============================] - 9s 178ms/step - loss: 1.5172 - accuracy: 0.5140 - val_loss: 0.6932 - val_accuracy: 0.5000\n",
+            "Epoch 2/5\n",
+            "47/47 [==============================] - 8s 177ms/step - loss: 0.6933 - accuracy: 0.5000 - val_loss: 0.6932 - val_accuracy: 0.5000\n",
+            "Epoch 3/5\n",
+            "47/47 [==============================] - 8s 176ms/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6932 - val_accuracy: 0.5000\n",
+            "Epoch 4/5\n",
+            "47/47 [==============================] - 8s 176ms/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6932 - val_accuracy: 0.5000\n",
+            "Epoch 5/5\n",
+            "47/47 [==============================] - 8s 174ms/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6932 - val_accuracy: 0.5000\n"
           ],
           "name": "stdout"
         }
