--- a/03_convolutional_neural_network_in_tensorflow.ipynb
+++ b/03_convolutional_neural_network_in_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03_convolutional_neural_network_in_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyMFFIrAtFRcHvf4XuzIpk/9",
+      "authorship_tag": "ABX9TyOcCmc3H4RIuYDSUP2D0O6s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1230,11 +1230,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kndEMyA5bULo",
-        "outputId": "231d091e-ad17-4b4e-9afb-bf0119e665b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kndEMyA5bULo",
+        "outputId": "231d091e-ad17-4b4e-9afb-bf0119e665b8"
       },
       "source": [
         "model_1.summary()"
@@ -1302,12 +1302,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RLFt29xjcroN",
-        "outputId": "a1dd33d4-ddaf-422a-ea99-dd5f667d2c0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 267
-        }
+        },
+        "id": "RLFt29xjcroN",
+        "outputId": "a1dd33d4-ddaf-422a-ea99-dd5f667d2c0f"
       },
       "source": [
         "# Visualize data\n",
@@ -1346,12 +1346,69 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "ZsLcVOFEdI0r"
       },
       "source": [
-        ""
+        "### 2. Preprocess the data (prepare it for a model)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N5QUgLjNgkaC"
+      },
+      "source": [
+        "# Define directory dataset paths\n",
+        "train_dir = \"pizza_steak/train/\"\n",
+        "test_dir = \"pizza_steak/test/\""
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y2diVXwRhFCe"
+      },
+      "source": [
+        "Our next step is to turn out data into **batches**.\n",
+        "\n",
+        "A batch is a small subset of data. Rather than look at all ~10,000 images at one time, a model might only look at 32 at a time.\n",
+        "\n",
+        "It does for a couple of reasons :\n",
+        "1. 10000 images (or more) might not fit into the memory of your processor (GPU).\n",
+        "2. Trying to learn the patterns in 10,000 images in one hit could result in the model not being able to learn very well.\n",
+        "\n",
+        "Why 32?\n",
+        "\n",
+        "Because 32 is good for your health...[https://twitter.com/ylecun/status/989610208497360896?s=20](https://twitter.com/ylecun/status/989610208497360896?s=20)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rr-5g6D9hgc8"
+      },
+      "source": [
+        "# Create train and test data generator and rescale the data\n",
+        "\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "train_datagen = ImageDataGenerator(rescale=1/255.)\n",
+        "test_datagen = ImageDataGenerator(rescale=1/255.)\n"
+      ],
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4tdOvP1lnKzV"
+      },
+      "source": [
+        "# Load in our image data from directories and turn them into batches"
       ],
       "execution_count": null,
       "outputs": []
